--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -1,11 +1,27 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  players: MyText
-  actions: MyText
+  name: game 1
+  players: >
+    player 1
+    player 2
+    player 3
+  actions: >
+    action 1
+    action 2
+    action 3
+  user: one
+  token: game-one-token
 
 two:
-  name: MyString
-  players: MyText
-  actions: MyText
+  name: game 2
+  players: >
+    player 1
+    player 2
+    player 3
+  actions: >
+    action 1
+    action 2
+    action 3
+  user: two
+  token: game-two-token
