--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -2,10 +2,10 @@
 
 one:
   name: game 1
-  players: >
-    player 1
-    player 2
-    player 3
+  # players: >
+  #   player 1
+  #   player 2
+  #   player 3
   actions: >
     action 1
     action 2
@@ -15,10 +15,10 @@ one:
 
 two:
   name: game 2
-  players: >
-    player 1
-    player 2
-    player 3
+  # players: >
+  #   player 1
+  #   player 2
+  #   player 3
   actions: >
     action 1
     action 2
