--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -4,8 +4,10 @@ one:
   name: MyString
   description: MyText
   game: one
+  user: one
 
 two:
   name: MyString
   description: MyText
   game: two
+  user: two
