--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: User one
   description: MyText
   game: one
   user: one
 
 two:
-  name: MyString
+  name: User two
   description: MyText
   game: two
   user: two
