--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,14 +1,8 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
 one:
   email: one@test.fe
 
-# column: value
-#
 two:
   email: two@test.fe
-# column: value
+
+three:
+  email: three@test.fe
