--- a/the-killer-online/package.json
+++ b/the-killer-online/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.2"
+    "@astrojs/node": "^6.0.1",
+    "astro": "^3.1.2",
+    "better-sqlite3": "^8.6.0",
+    "knex": "^2.5.1"
   }
 }
