--- a/the-killer-online/package.json
+++ b/the-killer-online/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/node": "^6.0.1",
+    "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.2",
     "better-sqlite3": "^8.6.0",
-    "knex": "^2.5.1"
+    "knex": "^2.5.1",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.8.0"
   }
 }
