--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/main.js",
-    "dev": "nodemon node src/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development nodemon node src/main.js",
+    "test": "NODE_ENV=test node --test"
   },
   "keywords": [],
   "author": "",
