--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@astrojs/node": "^6.0.1",
     "@astrojs/tailwind": "^5.0.0",
+    "@esbuild/darwin-x64": "^0.19.4",
     "astro": "^3.1.2",
-    "better-sqlite3": "^8.6.0",
-    "knex": "^2.5.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
