--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "daisyui": "^3.8.3",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-nice-avatar": "^1.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
