--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "killer-game",
-  "version": "1.0.0",
   "description": "This application generate Killer game for a party.",
+  "scripts": {
+    "dev": "npm-run-all --parallel dev:frontend dev:api",
+    "dev:frontend": "npm run dev -w @killer-game/frontend",
+    "dev:api": "npm run dev -w @killer-game/api"
+  },
   "workspaces": [
     "frontend",
     "api",
     "types"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
