--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@killer-game/types": "1.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
