--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "copy-to-clipboard": "^3.3.3",
     "daisyui": "^3.8.3",
     "next": "13.5.4",
-    "next-intl": "^3.0.0-beta.19",
+    "next-translate": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-nice-avatar": "^1.4.1"
@@ -23,6 +23,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "next-translate-plugin": "^2.6.2",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
