--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.0.1",
     "next": "13.5.4",
     "next-translate": "^2.6.2",
+    "qrcode-svg": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-nice-avatar": "^1.4.1"
