--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,12 @@ jobs:
 
       - name: Docker login
         env:
-          DOCKER_USER: ${{secrets.DOCKER_PASSWORD}}
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
+        run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
 
       - name: Docker push
         run: docker push "arousseau/killer-game-api:${{github.sha}}"
-
-
 
 
       # - name: Set up QEMU
