--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,20 +27,21 @@ jobs:
       - name: Docker push
         run: docker push "arousseau/killer-game-api:${{github.sha}}"
 
+  frontend:
+    runs-on: ubuntu-latest
 
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Docker build
+        run: docker build . -f "frontend.Dockerfile" -t "arousseau/killer-game-api:${{github.sha}}"
 
-      # - name: Use Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: "20.x"
+      - name: Docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
 
-      # - run: npm ci
-      #   working-directory: ./api
-
-      # - run: npm run test
-      #   working-directory: ./api
+      - name: Docker push
+        run: docker push "arousseau/killer-game-frontend:${{github.sha}}"
