--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@killer-game/types": "1.0.0",
+    "@nice-avatar-svg/react": "^0.0.4",
     "ajv": "^6.12.6",
     "better-sqlite3": "^10.0.0",
     "daisyui": "^4.0.1",
     "drizzle-orm": "^0.30.10",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "next-translate": "^2.6.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-nice-avatar": "^1.4.1",
     "react-qr-code": "^2.0.12"
   },
@@ -27,7 +28,7 @@
     "autoprefixer": "^10",
     "drizzle-kit": "^0.21.2",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.2.3",
     "next-translate-plugin": "^2.6.2",
     "postcss": "^8",
     "tailwindcss": "^3"
