--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "next-intl": "^3.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "slugify": "^1.6.6",
+    "typescript": "^5.5.0-beta",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
