--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@killer-game/frontend",
-  "version": "0.2.1",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev",
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@killer-game/client": "1.0.0",
-    "@killer-game/types": "1.0.0",
+    "@killer-game/client": "*",
+    "@killer-game/types": "*",
     "daisyui": "^4.0.1",
     "next": "13.5.4",
     "next-translate": "^2.6.2",
