--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@killer-game/api",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "src/main.js",
   "type": "module",
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@killer-game/client": "*",
     "@fastify/cors": "^8.4.0",
     "@killer-game/types": "*",
     "better-sqlite3": "^8.6.0",
