--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@killer-game/frontend",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev",
@@ -12,17 +12,17 @@
     "@killer-game/client": "*",
     "@killer-game/types": "*",
     "daisyui": "^4.0.1",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "next-translate": "^2.6.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-nice-avatar": "^1.4.1",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.2.3",
     "next-translate-plugin": "^2.6.2",
     "postcss": "^8",
     "tailwindcss": "^3"
