--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@killer-game/types": "*",
     "daisyui": "^4.0.1",
     "next": "^14.2.3",
-    "next-translate": "^2.6.2",
+    "next-intl": "^3.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-nice-avatar": "^1.4.1",
