--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@killer-game/client": "*",
     "@killer-game/types": "*",
     "daisyui": "^4.0.1",
