--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: deploy
 
 on:
-  push:
   workflow_run:
-    workflows: [Run Tests]
+    workflows:
+      - build.api
+      - build.frontend
     branches:
       - main
       - deploy
