--- a/.github/workflows/build.api.yml
+++ b/.github/workflows/build.api.yml
@@ -10,7 +10,7 @@ on:
       - "api.Dockerfile"
 
 jobs:
-  api:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -38,3 +38,19 @@ jobs:
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
         run: docker push "$DOCKER_USER/killer-game-api" --all-tags
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy the new image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/killer-game
+            docker pull arousseau/killer-game-api
+            docker pull arousseau/killer-game-frontend
+            docker stack deploy -c docker-compose.yml killer-game
