--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -4,14 +4,34 @@ on:
   push:
     branches:
       - main
-      - deploy
     paths:
+      - "docker-compose.yml"
+      - "types/**"
+      - "client/**"
       - "api/**"
       - "api.Dockerfile"
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+
+      - run: npm ci
+        working-directory: ./api
+
+      - run: npm run test
+        working-directory: ./api
+
   build:
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: Checkout repository
@@ -52,5 +72,4 @@ jobs:
           script: |
             cd ~/killer-game
             docker pull arousseau/killer-game-api
-            docker pull arousseau/killer-game-frontend
             docker stack deploy -c docker-compose.yml killer-game
