--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
     paths:
+      - "docker-compose.yml"
+      - "types/**"
+      - "client/**"
       - "frontend/**"
       - "frontend.Dockerfile"
 
@@ -37,3 +40,18 @@ jobs:
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
         run: docker push "$DOCKER_USER/killer-game-frontend" --all-tags
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy the new image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/killer-game
+            docker pull arousseau/killer-game-frontend
+            docker stack deploy -c docker-compose.yml killer-game
