--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "checkJs": true,
     "strict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "paths": {
       "@/*": [
         "./src/*"
