--- a/api/package.json
+++ b/api/package.json
@@ -13,19 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@killer-game/client": "*",
     "@fastify/cors": "^8.4.0",
+    "@killer-game/client": "*",
     "@killer-game/types": "*",
-    "better-sqlite3": "^8.6.0",
     "fastify": "^4.23.2",
     "fastify-sse-v2": "^3.1.2",
     "knex": "^2.5.1",
     "pino-pretty": "^10.2.0",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.7",
     "unique-names-generator": "^4.7.1"
+  },
+  "engines": {
+    "node": ">=24.0.0 <25.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
