--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,9 @@
   "name": "@killer-game/frontend",
   "version": "4.0.3",
   "private": true,
+  "engines": {
+    "node": ">=24.0.0 <25.0.0"
+  },
   "scripts": {
     "dev": "NODE_ENV=development next dev",
     "build": "next build",
@@ -29,4 +32,3 @@
     "tailwindcss": "^3"
   }
 }
-
