--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@killer-game/frontend",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "private": true,
   "engines": {
     "node": ">=24.0.0 <25.0.0"
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.3",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.12",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
