--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "^14.2.3",
     "next-translate-plugin": "^2.6.2",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^5.9.2"
   }
 }
