--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@killer-game/client": "*",
     "@killer-game/types": "*",
-    "daisyui": "^4.0.1",
+    "@tailwindcss/postcss": "^4.1.12",
     "next": "^14.2.3",
     "next-intl": "^3.14.1",
     "react": "^18.3.1",
@@ -27,11 +27,12 @@
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
     "autoprefixer": "^10",
+    "daisyui": "^5.0.54",
     "eslint": "^8",
     "eslint-config-next": "^14.2.3",
     "next-translate-plugin": "^2.6.2",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^4.1.0",
     "typescript": "^5.9.2"
   }
 }
