--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
-  "version": "2.0.0"
+  "version": "2.0.0",
+  "dependencies": {
+    "classnames": "^2.5.1"
+  }
 }
