--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@killer-game/frontend",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "private": true,
   "engines": {
     "node": ">=24.0.0 <25.0.0"
@@ -15,6 +15,7 @@
     "@killer-game/client": "*",
     "@killer-game/types": "*",
     "@tailwindcss/postcss": "^4.1.12",
+    "classnames": "^2.5.1",
     "next": "^14.2.3",
     "next-intl": "^3.14.1",
     "react": "^18.3.1",
